# jazz

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: quality_check.yml
3party/imgui-1.90.5/: CMakeLists.txt
3party/json/: CMakeLists.txt
3party/json/include/: json.hpp
3party/tl/: CMakeLists.txt
cmake/: CustomTargets.cmake  GTest.cmake  Sanitizers.cmake
cmd/: CMakeLists.txt
cmd/HelloWorld/: CMakeLists.txt  main.cpp
cmd/Naive/: CMakeLists.txt  main.cpp
cmd/Naive/Asset/: scene.json
cmd/Naive/Entity/: Entity.hpp  Scene.cpp  Scene.hpp  Square.cpp  Square.hpp
lib/: CMakeLists.txt
lib/TypeTraits/: CMakeLists.txt
lib/TypeTraits/include/TypeTraits/: Core.hpp
test/HelloWorld/: CMakeLists.txt
